apps/base/home-esphome/deploy/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: esphome
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
      app.kubernetes.io/component: esphome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
        app.kubernetes.io/component: esphome
      annotations:
        k8s.v1.cni.cncf.io/networks: "kube-system/k8s-bridge"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # esp
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: esphome
        image: "registry.lan/esphome:2026.9.1"
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 6052
          name: http
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: http
        resources:
          requests:
            cpu: 25m
            memory: 256Mi
          limits:
            cpu: 250m
            memory: 512Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: esphome-data
          mountPath: /config
          subPath: config
        - name: tmp-volume
          mountPath: /tmp
        - name: cache-volume
          mountPath: /home/esp/.cache
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: esphome-data
        persistentVolumeClaim:
          claimName: esphome-data
      - name: tmp-volume
        emptyDir: {}
      - name: cache-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
