apps/base/home-esphome/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  ports:
  - port: 6052
    name: http
  selector:
    app.kubernetes.io/name: esphome
    app.kubernetes.io/component: esphome
