apps/base/home-esphome/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/name: ESPHome
    gethomepage.dev/description: Control your ESP8266/ESP32
    gethomepage.dev/icon: esphome
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=esphome"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - esphome.home.intra.web_domain_name
      secretName: opensslpki-ingress-tls
  rules:
  - host: esphome.home.intra.web_domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: esphome
            port:
              name: http
