apps/base/home-esphome/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-esphome
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: esphome
      app.kubernetes.io/component: esphome

  ingress:
    - ports:
        - port: http
      from:
        # Allow from the ingress controller
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
